This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

17-May-2004 (Lars Duening)  (3.3.549)
  - (efuns.c, closure) Efun get_type_info() can now return the name
       of the defining program for a lfun or context closure (Bug #0000010).
  - (configure) Removed double checks for stdint.h and inttypes.h .
  - (wiz_list.c) During a GC, the references for the error filename
       and message weren't cleared.
  - (gcollect) In general, string references weren't cleared during the
       GC (a holdover from when all strings were tabled).

16-May-2004 (Lars Duening)  (3.3.548)
  - (my-stdint.h) I checked for a subtly wrong define here, causing the
       compilation to break on Linux (reported by Ralph).
  - (configure, my-stdint.h) FreeBSD doesn't have stdint.h, but it
       has inttypes.h which serves mostly the same purpose (reported by
       Joseph).

15-May-2004 (Lars Duening)  (3.3.547)
  - (configure, my-stdint.h, sha1.h) Added a test for and a replacement
       of the C99 include file stdint.h, which is required by the sha1
       code (reported by Joseph).

14-May-2004 (Lars Duening)  (3.3.546)
  - (comm.c, simul_efun.c) Corrected compilation errors (thanks, Ralph!)

13-May-2004 (Lars Duening)  (3.3.545)
  - (comm.c, pkg-mccp) A MCCP connection can now be terminated by force from
       the driver.
  - (comm.c, gcollect.c ) USE_PTHREADS: The memory allocations/deallocations
       for the background thread are done using malloc()/free().
  - (configure, smalloc.c) USE_PTHREADS: With threads, smalloc no longer
       attempts to replace malloc() and friends. This way we can
       use smalloc() for main-thread allocations, and fall back on system
       malloc() for sub-thread allocations. In extension, smalloc is again
       the default allocator even if pthreads are enabled.
  - (configure) If pthreads are not requested, don't add the lib to