@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+18-May-2004 (Lars Duening)  (3.3.550)
+  - (efuns.c) Bah, forgot the 'MTRACE_ARG' to the call of
+      mstring_cvt_progname(), so the file didn't compile when MALLOC_TRACE
+       was enabled (reported by Ralph).
+
 17-May-2004 (Lars Duening)  (3.3.549)
   - (efuns.c, closure) Efun get_type_info() can now return the name
        of the defining program for a lfun or context closure (Bug #0000010).
